--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -218,8 +218,8 @@ jobs:
 
     - name: Build frontend
       run: |
-        # Install dependencies
-        npm ci
+        # Install dependencies with legacy-peer-deps to handle React 19 compatibility
+        npm ci --legacy-peer-deps
 
         # Build frontend to create dist directory
         echo "Building frontend..."
@@ -322,6 +322,279 @@ jobs:
           --document-name "AWS-RunShellScript" \
           --parameters commands="$COMMANDS_JSON" \
           --output text
+
+    - name: Deploy Cortex XDR Agent
+      continue-on-error: true
+      run: |
+        echo "Checking for xdr_install directory and tar.gz file..."
+        
+        # Debug workspace structure
+        echo "Current directory: $(pwd)"
+        echo "Listing workspace root content:"
+        ls -la
+        
+        # Initialize error status flag
+        XDR_INSTALL_SUCCESS=true
+        
+        # Check if xdr_install directory exists
+        if [ -d "xdr_install" ]; then
+          echo "Found xdr_install directory"
+          echo "Listing xdr_install content:"
+          ls -la xdr_install
+          
+          # Check for .tar.gz files
+          TAR_FILES=$(find xdr_install -name "*.tar.gz" | head -1)
+          
+          if [ -n "$TAR_FILES" ]; then
+            echo "Found tar.gz file: $TAR_FILES"
+            
+            # Upload the tar.gz file to S3 temporarily for transfer to EC2
+            S3_BUCKET="${{ env.TF_STATE_BUCKET }}"
+            TAR_FILENAME=$(basename "$TAR_FILES")
+            
+            # Debug the S3 bucket name
+            echo "S3 Bucket: $S3_BUCKET"
+            
+            # Fallback if TF_STATE_BUCKET is not set
+            if [ -z "$S3_BUCKET" ]; then
+              echo "TF_STATE_BUCKET not set, falling back to environment value"
+              # Get the bucket name from terraform output
+              cd terraform
+              S3_BUCKET=$(terraform output -raw tf_state_bucket || echo "")
+              cd ..
+              
+              if [ -z "$S3_BUCKET" ]; then
+                echo "::warning::Could not determine S3 bucket name for file transfer. XDR installation skipped."
+                echo "::notice::XDR Agent installation failed: Could not determine S3 bucket name"
+                XDR_INSTALL_SUCCESS=false
+              fi
+            fi
+            
+            if [ "$XDR_INSTALL_SUCCESS" = true ]; then
+              echo "Using S3 bucket: $S3_BUCKET for XDR installation files"
+              
+              echo "Uploading $TAR_FILENAME to S3 bucket $S3_BUCKET..."
+              aws s3 cp "$TAR_FILES" "s3://$S3_BUCKET/$TAR_FILENAME" || {
+                echo "::warning::Failed to upload XDR installation files to S3. XDR installation skipped."
+                echo "::notice::XDR Agent installation failed: S3 upload error"
+                XDR_INSTALL_SUCCESS=false
+              }
+              
+              if [ "$XDR_INSTALL_SUCCESS" = true ]; then
+                # Create a script to handle the XDR installation on the EC2 instance
+                echo "Creating XDR installation script..."
+                
+                # Write script contents line by line to avoid heredoc YAML issues
+                echo '#!/bin/bash' > xdr_install.sh
+                echo '# Exit on command errors but allow the script to continue' >> xdr_install.sh
+                echo 'set +e' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Create the log directory if it doesn'"'"'t exist' >> xdr_install.sh
+                echo 'mkdir -p /var/log' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Log file for installation' >> xdr_install.sh
+                echo 'LOG_FILE="/var/log/xdr_install.log"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Function for logging' >> xdr_install.sh
+                echo 'log() {' >> xdr_install.sh
+                echo '  echo "[$(date '"'"'+%Y-%m-%d %H:%M:%S'"'"')] $1" | tee -a "$LOG_FILE"' >> xdr_install.sh
+                echo '}' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Start installation process' >> xdr_install.sh
+                echo 'log "Starting Cortex XDR installation"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Create temporary directory for download' >> xdr_install.sh
+                echo 'TEMP_DIR=$(mktemp -d)' >> xdr_install.sh
+                echo 'cd "$TEMP_DIR"' >> xdr_install.sh
+                echo 'log "Working in temporary directory: $TEMP_DIR"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Download the tar.gz file from S3' >> xdr_install.sh
+                echo 'S3_FILE="$1"' >> xdr_install.sh
+                echo 'FILENAME=$(basename "$S3_FILE")' >> xdr_install.sh
+                echo 'log "Downloading $S3_FILE from S3"' >> xdr_install.sh
+                echo 'aws s3 cp "s3://$S3_FILE" .' >> xdr_install.sh
+                echo 'if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '  log "ERROR: Failed to download file from S3"' >> xdr_install.sh
+                echo '  exit 1' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Extract the archive' >> xdr_install.sh
+                echo 'log "Extracting $FILENAME"' >> xdr_install.sh
+                echo 'tar -xzf "$FILENAME"' >> xdr_install.sh
+                echo 'if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '  log "ERROR: Failed to extract archive"' >> xdr_install.sh
+                echo '  exit 1' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo 'log "Archive extracted successfully"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Create the /etc/panw directory if it doesn'"'"'t exist' >> xdr_install.sh
+                echo 'if [ ! -d "/etc/panw" ]; then' >> xdr_install.sh
+                echo '  log "Creating /etc/panw directory"' >> xdr_install.sh
+                echo '  mkdir -p /etc/panw' >> xdr_install.sh
+                echo '  if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '    log "ERROR: Failed to create /etc/panw directory"' >> xdr_install.sh
+                echo '    exit 1' >> xdr_install.sh
+                echo '  fi' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Find the cortex.conf file' >> xdr_install.sh
+                echo 'CONF_FILE=$(find . -name "cortex.conf" | head -1)' >> xdr_install.sh
+                echo 'if [ -n "$CONF_FILE" ]; then' >> xdr_install.sh
+                echo '  log "Found configuration file: $CONF_FILE"' >> xdr_install.sh
+                echo '  log "Copying $CONF_FILE to /etc/panw/"' >> xdr_install.sh
+                echo '  cp "$CONF_FILE" /etc/panw/' >> xdr_install.sh
+                echo '  if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '    log "ERROR: Failed to copy configuration file"' >> xdr_install.sh
+                echo '    exit 1' >> xdr_install.sh
+                echo '  fi' >> xdr_install.sh
+                echo 'else' >> xdr_install.sh
+                echo '  log "ERROR: Could not find cortex.conf file"' >> xdr_install.sh
+                echo '  exit 1' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Find the installation script (cortex*sh)' >> xdr_install.sh
+                echo 'INSTALL_SCRIPT=$(find . -name "cortex*sh" | head -1)' >> xdr_install.sh
+                echo 'if [ -n "$INSTALL_SCRIPT" ]; then' >> xdr_install.sh
+                echo '  log "Found installation script: $INSTALL_SCRIPT"' >> xdr_install.sh
+                echo '  log "Setting executable permissions on $INSTALL_SCRIPT"' >> xdr_install.sh
+                echo '  chmod +x "$INSTALL_SCRIPT"' >> xdr_install.sh
+                echo '  if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '    log "ERROR: Failed to set executable permissions"' >> xdr_install.sh
+                echo '    exit 1' >> xdr_install.sh
+                echo '  fi' >> xdr_install.sh
+                echo '  ' >> xdr_install.sh
+                echo '  log "Executing installation script"' >> xdr_install.sh
+                echo '  ./$INSTALL_SCRIPT' >> xdr_install.sh
+                echo '  INSTALL_RESULT=$?' >> xdr_install.sh
+                echo '  if [ $INSTALL_RESULT -eq 0 ]; then' >> xdr_install.sh
+                echo '    log "Installation completed successfully"' >> xdr_install.sh
+                echo '  else' >> xdr_install.sh
+                echo '    log "ERROR: Installation failed with exit code $INSTALL_RESULT"' >> xdr_install.sh
+                echo '    exit 1' >> xdr_install.sh
+                echo '  fi' >> xdr_install.sh
+                echo 'else' >> xdr_install.sh
+                echo '  log "ERROR: Could not find installation script (cortex*sh)"' >> xdr_install.sh
+                echo '  exit 1' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Clean up' >> xdr_install.sh
+                echo 'log "Cleaning up temporary directory"' >> xdr_install.sh
+                echo 'cd /' >> xdr_install.sh
+                echo 'rm -rf "$TEMP_DIR"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo 'log "Cortex XDR installation process completed"' >> xdr_install.sh
+                echo 'exit 0' >> xdr_install.sh
+                
+                # Make the script executable
+                chmod +x xdr_install.sh
+                
+                # Upload the script to S3
+                aws s3 cp xdr_install.sh "s3://$S3_BUCKET/xdr_install.sh" || {
+                  echo "::warning::Failed to upload XDR installation script to S3. XDR installation skipped."
+                  echo "::notice::XDR Agent installation failed: Script upload error"
+                  XDR_INSTALL_SUCCESS=false
+                }
+                
+                if [ "$XDR_INSTALL_SUCCESS" = true ]; then
+                  echo "Running XDR installation on EC2 instance..."
+                  # Create the SSM command to download and run the installation script
+                  XDR_COMMANDS='["aws s3 cp s3://'$S3_BUCKET'/xdr_install.sh /tmp/xdr_install.sh", "chmod +x /tmp/xdr_install.sh", "/tmp/xdr_install.sh '$S3_BUCKET'/'$TAR_FILENAME'"]'
+                  
+                  # Execute the installation via SSM
+                  aws ssm send-command \
+                    --instance-ids ${{ env.APP_INSTANCE_ID }} \
+                    --document-name "AWS-RunShellScript" \
+                    --parameters commands="$XDR_COMMANDS" \
+                    --output text > ssm_command_output.txt || {
+                      echo "::warning::Failed to send SSM command to EC2 instance. XDR installation skipped."
+                      echo "::notice::XDR Agent installation failed: SSM command error"
+                      XDR_INSTALL_SUCCESS=false
+                    }
+                  
+                  if [ "$XDR_INSTALL_SUCCESS" = true ]; then
+                    # Get the command ID from the output
+                    SSM_COMMAND_ID=$(head -n1 ssm_command_output.txt | awk '{print $3}')
+                    echo "SSM Command ID: $SSM_COMMAND_ID"
+                    
+                    if [ -n "$SSM_COMMAND_ID" ]; then
+                      # Wait for the command to complete
+                      echo "Waiting for the XDR installation to complete..."
+                      
+                      # Initialize variables
+                      SSM_STATUS="Pending"
+                      MAX_RETRIES=30
+                      COUNT=0
+                      
+                      # Loop until the command completes or times out
+                      while [ "$SSM_STATUS" != "Success" ] && [ "$SSM_STATUS" != "Failed" ] && [ "$COUNT" -lt "$MAX_RETRIES" ]; do
+                        # Get the command status
+                        SSM_STATUS=$(aws ssm list-commands \
+                          --command-id "$SSM_COMMAND_ID" \
+                          --query "Commands[0].Status" \
+                          --output text)
+                        
+                        echo "Attempt $COUNT/$MAX_RETRIES: Command status is $SSM_STATUS"
+                        
+                        if [ "$SSM_STATUS" == "Success" ]; then
+                          echo "✅ XDR installation completed successfully."
+                          break
+                        elif [ "$SSM_STATUS" == "Failed" ]; then
+                          echo "⚠️ XDR installation encountered an issue. See logs for details."
+                          echo "::warning::XDR installation failed on the EC2 instance."
+                          echo "::notice::XDR Agent installation failed: Installation script error"
+                          XDR_INSTALL_SUCCESS=false
+                          # Get the command output to understand the failure
+                          aws ssm get-command-invocation \
+                            --command-id "$SSM_COMMAND_ID" \
+                            --instance-id ${{ env.APP_INSTANCE_ID }} \
+                            --query "StandardOutputContent" \
+                            --output text
+                          aws ssm get-command-invocation \
+                            --command-id "$SSM_COMMAND_ID" \
+                            --instance-id ${{ env.APP_INSTANCE_ID }} \
+                            --query "StandardErrorContent" \
+                            --output text
+                          break
+                        fi
+                        
+                        # Increment counter and wait before checking again
+                        COUNT=$((COUNT+1))
+                        sleep 10
+                      done
+                      
+                      if [ "$COUNT" -ge "$MAX_RETRIES" ]; then
+                        echo "⚠️ Timed out waiting for XDR installation to complete. Current status: $SSM_STATUS"
+                        echo "::warning::Timed out waiting for XDR installation to complete."
+                        echo "::notice::XDR Agent installation status: Timeout - final status unknown"
+                        XDR_INSTALL_SUCCESS=false
+                      fi
+                    else
+                      echo "⚠️ Failed to get SSM Command ID. XDR installation status unknown."
+                      echo "::warning::Failed to get SSM Command ID. XDR installation status unknown."
+                      echo "::notice::XDR Agent installation failed: Could not get command ID"
+                      XDR_INSTALL_SUCCESS=false
+                    fi
+                  fi
+                fi
+              fi
+            fi
+          else
+            echo "⚠️ No .tar.gz files found in xdr_install directory."
+            echo "::notice::XDR Agent installation skipped: No .tar.gz files found"
+            XDR_INSTALL_SUCCESS=false
+          fi
+        else
+          echo "⚠️ xdr_install directory not found in the repository."
+          echo "::notice::XDR Agent installation skipped: Directory not found"
+          XDR_INSTALL_SUCCESS=false
+        fi
+        
+        # Final installation status summary
+        if [ "$XDR_INSTALL_SUCCESS" = true ]; then
+          echo "::notice::Cortex XDR Agent installation completed successfully"
+        else
+          echo "::warning::Cortex XDR Agent installation did not complete successfully, but build will continue"
+        fi
 
     - name: Output Deployment Info
       run: |
